--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: sunxian.github.io
 email: 2582542870@qq.com
 description: >- # this means to ignore newlines until "baseurl:"
-  personal blog
+  work hard,hodl bitcoin,love sisi❤🥰
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: zhongmousun
